# bullethell

./: .gitignore  Cargo.toml  README.md  combat-basics.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
.github/workflows/: deploy.yml
assets/content/: game.ron
crates/engine-wasm/: Cargo.toml
crates/engine-wasm/src/: constants.rs  game.rs  lib.rs  rng.rs  types.rs
crates/engine-wasm/src/pool/: bullet.rs  generator.rs  helper.rs  mod.rs  object.rs
crates/engine-wasm/src/runtime/: archmage.rs  boss.rs  bullet_update.rs  collision.rs  emitter.rs  generators.rs  helpers.rs  mod.rs  player.rs  render.rs  status.rs
crates/schema/: Cargo.toml
crates/schema/src/: lib.rs
src/: config.ts  main.ts  types.ts
src/renderer/: atlas.ts  particles.ts  renderer.ts  shader.ts
src/runtime/: input.ts
tools/content-packer/: Cargo.toml
tools/content-packer/src/: main.rs
twilight-archmage/: README.md  nox-hard-mode.md  phases-and-patterns.md  projectiles.md
