[workspace]
members = [
  "crates/schema",
  "crates/engine-wasm",
  "tools/content-packer",
]
resolver = "2"

[workspace.package]
edition = "2024"
license = "MIT"
version = "0.1.0"

[workspace.dependencies]
anyhow = "1.0"
bincode = { version = "2.0.1", features = ["serde"] }
console_error_panic_hook = "0.1.7"
getrandom = { version = "0.3.4", features = ["wasm_js"] }
js-sys = "0.3.82"
ron = "0.12.0"
serde = { version = "1.0.228", features = ["derive"] }
serde-wasm-bindgen = "0.6.5"
serde_json = "1.0.145"
wasm-bindgen = "0.2.105"

