[package]
name = "engine-wasm"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
bincode.workspace = true
console_error_panic_hook.workspace = true
getrandom.workspace = true
js-sys.workspace = true
schema = { path = "../schema" }
serde.workspace = true
serde-wasm-bindgen.workspace = true
serde_json.workspace = true
wasm-bindgen.workspace = true

